updates to IA UI and menus

--- a/app/views/psd-revised-flow/activity.html
+++ b/app/views/psd-revised-flow/activity.html
@@ -1,48 +1,36 @@
 {% extends "layout-routes-02.html" %}
 
 {% block pageTitle %}
-    Activity page
+    Activity
 {% endblock %}
-
-
 
 
 {% block content %}
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-        <div class="govuk-!-margin-top-4 govuk-!-padding-bottom-4">
 
-            <div class="govuk-grid-row">
-                <div class="govuk-grid-column-two-thirds">
+        <div class="govuk-grid-row">
+            <div class="govuk-grid-column-three-quarters">
+                <span class="govuk-caption-l">Allergation: 2101-0008 </span>
+                <h1 class="govuk-heading-l">
+                    Activity
+                </h1>
 
-
-                    <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
-                        This is the activity page
-                    </h1>
-
-                    <p class="govuk-body opss-secondary-text">
-                        Initially the same as the current page <!-- but we will move the comment form (from the comment page) and place it insitu at the top of the activity page (with ID #comment). The comment is appended to the list, as now.-->
-                    </p>
-
-                    <!--p class="govuk-body opss-secondary-text">
-                        We should have a comments page (showing them in vertical order with edit options if you wrote them) - and a link shown in the left menu. (These comments will also appear in the activity page).
-                    </p-->
-
+                <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">Initially the same as the current page ... Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, sunt?</p>
+            </div>
+            <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
+                <div class="opss-text-align-right">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+                        Add a comment
+                    </a>
                 </div>
             </div>
-
         </div>
-    </div>
-</div>
-
-<div class="govuk-grid-row">
-    <div class="govuk-grid-column-full govuk-!-padding-top-7">
-
-
-
-
 
     </div>
 </div>
+
+
+
 
 {% endblock %}
