--- a/app/views/psd-revised-flow/case-opss-landing.html
+++ b/app/views/psd-revised-flow/case-opss-landing.html
@@ -76,6 +76,14 @@
                     </a>
                 </dd>
             </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Allergation   <!-- or Enquiry / Project -->
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    2101-0008
+                </dd>
+            </div>
             <!--div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Reference <span class="opss-numero" title="Number">&numero;</span>
@@ -84,14 +92,6 @@
                     12345-1882
                 </dd>
             </div-->
-            <div class="govuk-summary-list__row govuk-visually-hidden">
-                <dt class="govuk-summary-list__key">
-                    Allergation
-                </dt>
-                <dd class="govuk-summary-list__value">
-                    2101-0008
-                </dd>
-            </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Description
