--- a/app/views/psd-revised-flow/case-trading-stds-landing-non-admin.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-non-admin.html
@@ -78,18 +78,18 @@
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
+                    Allergation   <!-- or Enquiry / Project -->
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    2101-0008
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
                     Reference <span class="opss-numero" title="Number">&numero;</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
                     12345_ts300 <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">Trading standards reference</span>
-                </dd>
-            </div>
-            <div class="govuk-summary-list__row govuk-visually-hidden">
-                <dt class="govuk-summary-list__key">
-                    Allergation
-                </dt>
-                <dd class="govuk-summary-list__value">
-                    2101-0008
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
