--- a/app/views/psd-revised-flow/products.html
+++ b/app/views/psd-revised-flow/products.html
@@ -41,7 +41,7 @@
                 <a href="#" class="govuk-link govuk-link--no-visited-state" aria-current="page">Case</a>
             </li>
             <li class="opss-left-nav__active">
-                <a href="#" class="govuk-link govuk-link--no-visited-state">Products <span>(2)</span></a>
+                <a href="#page-content" class="govuk-link govuk-link--no-visited-state">Products <span>(2)</span></a>
 
                 <ul class="govuk-list">
                     <li>
@@ -63,7 +63,7 @@
                 <a href="images.html" class="govuk-link govuk-link--no-visited-state">Images <span>(7)</span></a>
             </li>
             <li>
-                <a href="supporting-information.html" class="govuk-link govuk-link--no-visited-state">Supporting information <span>(8)</span></a>
+                <a href="supporting-information.html" class="govuk-link govuk-link--no-visited-state">Supporting information <span>(9)</span></a>
             </li>
             <li>
                 <a href="activity.html" class="govuk-link govuk-link--no-visited-state">Activity</a>  <!-- have add comment on this page -->
