--- a/app/views/psd-revised-flow/risk-level.html
+++ b/app/views/psd-revised-flow/risk-level.html
@@ -48,74 +48,50 @@
 
         <ul class="govuk-list opss-left-nav">
             <li>
-                <a href="case.html" class="govuk-link govuk-link--no-visited-state">Case</a>
+                <a href="#" class="govuk-link govuk-link--no-visited-state">Case</a>
             </li>
             <li>
-                <a href="#" class="govuk-link govuk-link--no-visited-state">Products <span>(2)</span></a>
-
-                <ul class="govuk-list">
-                    <li>
-                        <a href="#" class="govuk-link govuk-link--no-visited-state">
-                            The Ipsum product one
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="govuk-link govuk-link--no-visited-state">
-                            Lorem second product name
-                        </a>
-                    </li>
-                </ul>
+                <a href="products.html" class="govuk-link govuk-link--no-visited-state">Products <span>(2)</span></a>
             </li>
             <li>
                 <a href="#" class="govuk-link govuk-link--no-visited-state">Businesses <span>(2)</span></a>
-
-                <ul class="govuk-list">
-                    <li>
-                        <a href="#" class="govuk-link govuk-link--no-visited-state">
-                            Reocco imports Limited
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="govuk-link govuk-link--no-visited-state">
-                            Lipopton retail Ltd
-                        </a>
-                    </li>
-                </ul>
             </li>
             <li>
                 <a href="#" class="govuk-link govuk-link--no-visited-state">Images <span>(7)</span></a>
-
-                <ul class="govuk-list">
-                    <li>
-                        <a href="#" class="govuk-link govuk-link--no-visited-state">
-                            Case images
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="govuk-link govuk-link--no-visited-state">
-                            Product images
-                        </a>
-                    </li>
-                </ul>
             </li>
             <li class="opss-left-nav__active">
-                <a href="#page-content" class="govuk-link govuk-link--no-visited-state" aria-current="page">Risk level</a>
+                <a href="#page-content" class="govuk-link govuk-link--no-visited-state">Supporting information <span>(9)</span></a>
 
                 <ul class="govuk-list">
                     <li>
-                        <a href="#assessment-1" class="govuk-link govuk-link--no-visited-state">
-                            Risk assessment 1
+                        <a href="accidents-and-incidents#accidents" class="govuk-link govuk-link--no-visited-state">Accidents and incidents <span>(2)</span></a>
+                    </li>
+                    <li>
+                        <a href="supporting-information#corrective" class="govuk-link govuk-link--no-visited-state">
+                            Corrective actions <span>(1)</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#assessment-2" class="govuk-link govuk-link--no-visited-state">
-                            Risk assessment 2
+                        <a href="supporting-information#assessment" class="govuk-link govuk-link--no-visited-state">
+                            Risk assessments <span>(2)</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="supporting-information#correspondence" class="govuk-link govuk-link--no-visited-state">
+                            Correspondence <span>(2)</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="supporting-information#testresult" class="govuk-link govuk-link--no-visited-state">
+                            Test results <span>(1)</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="supporting-information#other" class="govuk-link govuk-link--no-visited-state">
+                            Other <span>(1)</span>
                         </a>
                     </li>
                 </ul>
-            </li>
-            <li>
-                <a href="#" class="govuk-link govuk-link--no-visited-state">Supporting information (5)</a>
             </li>
             <li>
                 <a href="#" class="govuk-link govuk-link--no-visited-state">Activity</a>
