pds cases work plus new hazard column

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -109,7 +109,8 @@
           <p class="govuk-body"><b>Products:</b></p>
 
           <ul class="govuk-list govuk-list--bullet">
-            <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/products-page" target="_blank">Products</a> page</li>
+            <li class="strike"><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/products-page" target="_blank">Products</a> page</li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/products-page_new-col" target="_blank">Products</a> page (with new column)</li>
           </ul>
 
         </div>
