--- a/app/views/psd-revised-flow/case-opss-landing.html
+++ b/app/views/psd-revised-flow/case-opss-landing.html
@@ -45,7 +45,7 @@
             Skip to the main content
         </a>
 
-        {% include "psd-revised-flow/inc_left_nav_1.html" %}
+        {% include "psd-revised-flow/inc_left_nav_1_opss.html" %}
     </nav>
 
     <section id="page-content" role="region" class="govuk-grid-column-three-quarters">
@@ -68,7 +68,7 @@
                     Case name
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    New feature - readable case names
+                    New feature - readable case name
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
@@ -274,7 +274,7 @@
 
         <section class="govuk-!-margin-top-9 opss-grouping">
             <h3 id="source" class="govuk-heading-m opss-grouping__heading-m">
-                Allergation source
+                Case source
             </h3>
 
             <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
