--- a/app/views/psd-revised-flow/case-trading-stds-landing-different-team.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-different-team.html
@@ -55,7 +55,7 @@
                     Case name
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    New feature - readable case names
+                    New feature - readable case name
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
