--- a/app/views/psd-revised-flow/inc_case_content_1.html
+++ b/app/views/psd-revised-flow/inc_case_content_1.html
@@ -8,7 +8,7 @@
                     Case name
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    New feature - readable case names
+                    New feature - readable case name
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
