--- a/app/views/psd-revised-flow/inc_left_nav_1_opss.html
+++ b/app/views/psd-revised-flow/inc_left_nav_1_opss.html
@@ -8,6 +8,11 @@
                             Safety and compliance
                         </a>
                     </li>
+                    <li>
+                        <a href="#source" class="govuk-link govuk-link--no-visited-state">
+                            Case source
+                        </a>
+                    </li>                    
                 </ul>
             </li>
             <li>
