--- a/app/views/psd-revised-flow/index.html
+++ b/app/views/psd-revised-flow/index.html
@@ -40,25 +40,28 @@
 
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
-                    <a class="govuk-label govuk-link govuk-link--no-visited-state" href="case-trading-stds-landing.html" target="_blank">Trading Standards landing page (Admin)</a><br>
+                    <a class="govuk-label govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing.html" target="_blank">Trading Standards landing page (Admin)</a><br>
                     Admin users and team members have all editing rights - if the product owner is on your team you have editing rights
 
                     <ul class="govuk-list govuk-list--bullet">
-                        <li>
-                            <a class="govuk-label govuk-link govuk-link--no-visited-state" href="case-trading-stds-landing-non-admin.html" target="_blank">Trading Standards landing page (Non-Admin)</a>
+                        <li class="strike">
+                            <a class="govuk-label govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing-non-admin.html" target="_blank">Trading Standards landing page (Non-Admin)</a>
                         </li>
                         <li>
-                            <a class="govuk-label govuk-link govuk-link--no-visited-state" href="case-trading-stds-landing-different-team.html" target="_blank">Trading Standards landing page (different team)</a><br>
+                            <a class="govuk-label govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing-different-team.html" target="_blank">Trading Standards landing page (different team)</a>
+                        </li>
+                        <li>
+                            <a class="govuk-label govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing_warnings.html" target="_blank">Trading Standards landing page (Admin): after case creation</a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a class="govuk-label govuk-link govuk-link--no-visited-state" href="case-opss-landing" target="_blank">OPSS landing page (Allergation)</a>
+                    <a class="govuk-label govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-opss-landing.html" target="_blank">OPSS landing page (Allergation)</a>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae, corporis sed? Fuga aut veritatis architecto exercitationem quae voluptas quisquam blanditiis ab doloribus quas! Repellendus quidem quia qui nemo, a cumque.
 
                     <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                         <li>
-                            <a class="govuk-label govuk-link govuk-link--no-visited-state" href="case-opss-landing__enquiry" target="_blank">OPSS landing page (Enquiry)</a>
+                            <a class="govuk-label govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-opss-landing__enquiry.html" target="_blank">OPSS landing page (Enquiry)</a>
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                         </li>
                     </ul>
