--- a/app/views/psd-revised-flow/supporting-information.html
+++ b/app/views/psd-revised-flow/supporting-information.html
@@ -67,46 +67,46 @@
 
         <ul class="govuk-list opss-left-nav">
             <li>
-                <a href="#" class="govuk-link govuk-link--no-visited-state" aria-current="page">Case</a>
+                <a href="/psd-revised-flow/case.html" class="govuk-link govuk-link--no-visited-state" aria-current="page">Case</a>
             </li>
             <li>
-                <a href="products.html" class="govuk-link govuk-link--no-visited-state">Products <span>(2)</span></a>
+                <a href="/psd-revised-flow/products.html" class="govuk-link govuk-link--no-visited-state">Products <span>(2)</span></a>
             </li>
             <li>
-                <a href="#" class="govuk-link govuk-link--no-visited-state">Businesses <span>(2)</span></a>
+                <a href="/psd-revised-flow/businesses.html" class="govuk-link govuk-link--no-visited-state">Businesses <span>(2)</span></a>
             </li>
             <li>
-                <a href="images.html" class="govuk-link govuk-link--no-visited-state">Images <span>(7)</span></a>
+                <a href="/psd-revised-flow/images.html" class="govuk-link govuk-link--no-visited-state">Images <span>(7)</span></a>
             </li>
             <li class="opss-left-nav__active">
-                <a href="#page-content" class="govuk-link govuk-link--no-visited-state">Supporting information <span>(9)</span></a>
+                <a href="/psd-revised-flow/supporting-information.html#page-content" class="govuk-link govuk-link--no-visited-state">Supporting information <span>(9)</span></a>
 
                 <ul class="govuk-list">
                     <li>
-                        <a href="accidents-and-incidents#accidents" class="govuk-link govuk-link--no-visited-state">Accidents and incidents <span>(2)</span></a>
+                        <a href="/psd-revised-flow/accidents-and-incidents#accidents" class="govuk-link govuk-link--no-visited-state">Accidents and incidents <span>(2)</span></a>
                     </li>
                     <li>
-                        <a href="supporting-information#corrective" class="govuk-link govuk-link--no-visited-state">
+                        <a href="/psd-revised-flow/supporting-information.html#corrective" class="govuk-link govuk-link--no-visited-state">
                             Corrective actions <span>(1)</span>
                         </a>
                     </li>
                     <li>
-                        <a href="supporting-information#assessment" class="govuk-link govuk-link--no-visited-state">
+                        <a href="/psd-revised-flow/supporting-information.html#assessment" class="govuk-link govuk-link--no-visited-state">
                             Risk assessments <span>(2)</span>
                         </a>
                     </li>
                     <li>
-                        <a href="supporting-information#correspondence" class="govuk-link govuk-link--no-visited-state">
+                        <a href="/psd-revised-flow/supporting-information.html#correspondence" class="govuk-link govuk-link--no-visited-state">
                             Correspondence <span>(2)</span>
                         </a>
                     </li>
                     <li>
-                        <a href="supporting-information#testresult" class="govuk-link govuk-link--no-visited-state">
+                        <a href="/psd-revised-flow/supporting-information.html#testresult" class="govuk-link govuk-link--no-visited-state">
                             Test results <span>(1)</span>
                         </a>
                     </li>
                     <li>
-                        <a href="supporting-information#other" class="govuk-link govuk-link--no-visited-state">
+                        <a href="/psd-revised-flow/supporting-information.html#other" class="govuk-link govuk-link--no-visited-state">
                             Other <span>(1)</span>
                         </a>
                     </li>
@@ -120,9 +120,7 @@
 
     <section id="page-content" role="region" class="govuk-grid-column-three-quarters">
 
-        <!--
-        {% include "psd-revised-flow/inc_top_nav_supporting-information.html" %}
-        -->
+        <p class="govuk-body-l">content</p>
 
 
     </section>
