new files added to index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -111,6 +111,8 @@
           <ul class="govuk-list govuk-list--bullet">
             <li class="strike"><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/products-page" target="_blank">Products</a> page</li>
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/products-page_new-col" target="_blank">Products</a> page (with new column)</li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/products-page_new-filter-1" target="_blank">Products</a> page (with select filters)</li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/products-page_new-filter-2" target="_blank">Products</a> page (with checkbox filters)</li>
           </ul>
 
         </div>
