updated type in col header

--- a/app/views/cosmetics-general/tasks/index.html
+++ b/app/views/cosmetics-general/tasks/index.html
@@ -166,7 +166,7 @@
                 </li>
                 <li>
                     <span class="govuk-!-font-weight-bold govuk-!-display-inline">New feature:</span> Add (a nanomaterial)<br>
-                    The <u>Add</u> link simply goes to the first page of the new nanomaterials task ("What is the nanomaterial INCI name?"), and on completion adds the nanomaterial to <b>top</b> of the nanomaterial list as 'Completed'.
+                    The <u>Add</u> link simply goes to the first page of the new nanomaterials task ("What is the nanomaterial INCI name?"), and on completion adds the nanomaterial to the nanomaterial list as 'Completed'.
                 </li>
                 <li>
                     <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-remove-nanomaterial" target="_blank">Remove (nanomaterials)</a> <br>
