--- a/app/views/psd-general/products-page_new-filter-1.html
+++ b/app/views/psd-general/products-page_new-filter-1.html
@@ -184,7 +184,7 @@
                   <thead class="govuk-table__head">
                       <tr class="govuk-table__row">
                           <th class="govuk-visually-hidden">&nbsp;</th>
-                          <th id="prodtype" scope="col" class="govuk-table__header">Type</th>
+                          <th id="prodtype" scope="col" class="govuk-table__header">Product type</th>
                           <th id="haztype" scope="col" class="govuk-table__header">Hazard type</th>
                           <th id="cat" scope="col" class="govuk-table__header">Category</th>
                       </tr>
@@ -493,7 +493,7 @@
                   <tfoot class="govuk-table__head">
                       <tr class="govuk-table__row">
                           <th class="govuk-visually-hidden">&nbsp;</th>
-                          <th scope="col" class="govuk-table__header">Type</th>
+                          <th scope="col" class="govuk-table__header">Product type</th>
                           <th scope="col" class="govuk-table__header">Hazard type</th>
                           <th scope="col" class="govuk-table__header">Category</th>
                       </tr>
