--- a/app/views/product-case-testing/upload-a-product-image-success.html
+++ b/app/views/product-case-testing/upload-a-product-image-success.html
@@ -136,48 +136,70 @@
         <div class="govuk-!-margin-left-4 opss-borders opss-borders--left opss-borders--padding-l opss-borders--height-100">
 
             <h2 class="govuk-visually-hidden">The images you have added</h2>
-            <dl class="govuk-summary-list govuk-!-font-size-14 opss-summary-list-aside">
-                <div class="none0">
-                  <dt>
-                      <span class="govuk-visually-hidden">Title: </span><span id="imageTitle0"></span>
-                  </dt>
-                  <dd>
-                      <span class="govuk-visually-hidden">File name: </span><span id="fileName0"></span>
-                  </dd>
-                  <dd>
-                      <span class="govuk-visually-hidden">Alternative image text: </span><span id="imageDesc0"></span>
-                  </dd>
-                  <dd>
-                      <span class="govuk-visually-hidden">The image: </span><div class="imagearea0"></div>
-                  </dd>
-                  <dd>
-                      <a href="/product-case-testing/remove-a-product-image-success" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14">
-                          Remove<span class="govuk-visually-hidden"> image 1</span>
-                      </a>
-                  </dd>
-                </div>
+            <form novalidate>
+              <fieldset class="govuk-fieldset">
+                <dl class="govuk-summary-list govuk-!-font-size-14 opss-summary-list-aside">
+                    <div class="none0">
+                      <dt>
+                          <span class="govuk-visually-hidden">Title: </span><span id="imageTitle0"></span>
+                      </dt>
+                      <dd>
+                          <span class="govuk-visually-hidden">File name: </span><span id="fileName0"></span>
+                      </dd>
+                      <dd>
+                          <span class="govuk-visually-hidden">Alternative image text: </span><span id="imageDesc0"></span>
+                      </dd>
+                      <dd>
+                          <span class="govuk-visually-hidden">The image: </span><div class="imagearea0"></div>
+                      </dd>
+                      <dd>
+                          <a href="/product-case-testing/remove-a-product-image-success" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14">
+                              Remove<span class="govuk-visually-hidden"> image 1</span>
+                          </a>
+                      </dd>
+                      <dd class="govuk-radios govuk-radios--small govuk-!-display-inline-block">
+                          <div class="govuk-radios__item">
+                            <input class="govuk-radios__input" id="default-0" name="default-img" type="radio" value="image-1" checked>
+                            <label class="govuk-label govuk-radios__label govuk-!-font-size-14 govuk-!-padding-bottom-0" for="default-0">
+                              <span class="govuk-visually-hidden">Make this image the </span>Default image 
+                            </label>
+                          </div> 
+                      </dd>
+                    </div>
 
-                <div class="none1">
-                  <dt>
-                      <span class="govuk-visually-hidden">Title: </span><span id="imageTitle1"></span>
-                  </dt>
-                  <dd>
-                      <span class="govuk-visually-hidden">File name: </span><span id="fileName1"></span>
-                  </dd>
-                  <dd>
-                      <span class="govuk-visually-hidden">Alternative image text: </span><span id="imageDesc1"></span>
-                  </dd>
-                  <dd>
-                      <span class="govuk-visually-hidden">The image: </span><div class="imagearea1"></div>
-                  </dd>
-                  <dd>
-                      <a href="/product-case-testing/remove-a-product-image-success" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14">
-                          Remove<span class="govuk-visually-hidden"> image 2</span>
-                      </a>
-                  </dd>
-                </div>
-            </dl>
+                    <div class="none1">
+                      <dt>
+                          <span class="govuk-visually-hidden">Title: </span><span id="imageTitle1"></span>
+                      </dt>
+                      <dd>
+                          <span class="govuk-visually-hidden">File name: </span><span id="fileName1"></span>
+                      </dd>
+                      <dd>
+                          <span class="govuk-visually-hidden">Alternative image text: </span><span id="imageDesc1"></span>
+                      </dd>
+                      <dd>
+                          <span class="govuk-visually-hidden">The image: </span><div class="imagearea1"></div>
+                      </dd>
+                      <dd>
+                          <a href="/product-case-testing/remove-a-product-image-success" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14">
+                              Remove<span class="govuk-visually-hidden"> image 2</span>
+                          </a>
+                      </dd>
+                      <dd class="govuk-radios govuk-radios--small govuk-!-display-inline-block">
+                        <div class="govuk-radios__item">
+                          <input class="govuk-radios__input" id="default-2" name="default-img" type="radio" value="image-2">
+                          <label class="govuk-label govuk-radios__label govuk-!-font-size-14 govuk-!-padding-bottom-0" for="default-2">
+                            <span class="govuk-visually-hidden">Make this image the </span>Default image 
+                          </label>
+                        </div> 
+                      </dd>                      
+                    </div>
+                </dl>
+              </fieldset>
 
+              <!-- ******** hidden no js button to submit changes to the radios ******* -->
+
+          </form>
         </div>
     </section>
 
