--- a/app/views/psd-general/products-page.html
+++ b/app/views/psd-general/products-page.html
@@ -26,7 +26,7 @@
                     <span id="search-hint">You can search for one or more products by using the keywords that describe them.</span> You can also sort the ordering of the search results.
                 </p>
                 <p class="govuk-body-s govuk-!-margin-bottom-1">
-                    You can filter the results by hazard type<span class="opss-nojs-hide">: start typing in the hazard type filter to make a selection</span>.
+                    You can filter the results by hazard type.
                 </p>
                 <p class="govuk-body-s govuk-visually-hidden">
                   Search results appear within the following <code>form</code> and within the <code>role = region</code>.
